fix search input overflow

--- a/public/styles/user.css
+++ b/public/styles/user.css
@@ -509,7 +509,7 @@ tr td,
   border-radius: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
-  font-size: 10px;
+  font-size: 12px;
 }
 
 .search input[type="text"]:focus {
